updated portfolio section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#skills">Skills</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -40,8 +40,45 @@
 				</div>
 			</article>
 
-		<!-- Work -->
-			<article id="work" class="wrapper style2">
+		<!-- Portfolio -->
+		<article id="portfolio" class="wrapper style3">
+			<div class="container">
+				<header>
+					<h2>Here’s some stuff I made recently.</h2>
+					<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+				</header>
+				<div class="row">
+					<div class="col-4 col-6-medium col-12-small">
+						<article class="box style2">
+							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<h3><a href="#">Magna feugiat</a></h3>
+							<p>Ornare nulla proin odio consequat.</p>
+						</article>
+					</div>
+					<div class="col-4 col-6-medium col-12-small">
+						<article class="box style2">
+							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+							<h3><a href="#">Veroeros primis</a></h3>
+							<p>Ornare nulla proin odio consequat.</p>
+						</article>
+					</div>
+					<div class="col-4 col-6-medium col-12-small">
+						<article class="box style2">
+							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+							<h3><a href="#">Lorem ipsum</a></h3>
+							<p>Ornare nulla proin odio consequat.</p>
+						</article>
+					</div>
+				</div>
+				<footer>
+					<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+					<a href="#contact" class="button large scrolly">Get in touch with me</a>
+				</footer>
+			</div>
+		</article>	
+
+		<!-- Skills -->
+			<article id="skills" class="wrapper style2">
 				<div class="container">
 					<header>
 						<h2>Here's all the stuff I do.</h2>
@@ -77,64 +114,6 @@
 				</div>
 			</article>
 
-		<!-- Portfolio -->
-			<article id="portfolio" class="wrapper style3">
-				<div class="container">
-					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
-					</header>
-					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
-					</footer>
-				</div>
-			</article>
-
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
@@ -149,10 +128,20 @@
 							<h3>Find me on ...</h3>
 							<ul class="social">
 								<li>
-									<a href="https://www.linkedin.com/in/gregrodriguezjr/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
+									<a 
+										target="_blank"
+										href="https://www.linkedin.com/in/gregrodriguezjr/" 
+										class="icon brands fa-linkedin-in">
+										<span class="label">LinkedIn</span>
+									</a>
 								</li>
 								<li>
-									<a href="https://github.com/GregRodriguezJr" class="icon brands fa-github"><span class="label">Github</span></a>
+									<a 
+										target="_blank"
+										href="https://github.com/GregRodriguezJr" 
+										class="icon brands fa-github">
+										<span class="label">Github</span>
+									</a>
 								</li>
 							</ul>
 							<hr />
