--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 				<div class="row">
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<h3><a href="#">Magna feugiat</a></h3>
-							<p>Ornare nulla proin odio consequat.</p>
+							<a href="https://gregrodriguezjr.github.io/crypto_dashboard_v2/" target="_blank" class="image featured"><img src="images/pic01.jpg" alt="stock market candles" /></a>
+							<h3><a href="https://gregrodriguezjr.github.io/crypto_dashboard_v2/" target="_blank">Crypto Dashboard</a></h3>
+							<p><a href="https://github.com/GregRodriguezJr/crypto_dashboard_v2" target="_blank">Source Code</a></p>
 						</article>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
