--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					</div>
 					<footer>
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
 			</article>
