updated skills button text and scroll location

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				</div>
 				<footer>
 					<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-					<a href="#contact" class="button large scrolly">Get in touch with me</a>
+					<a href="#skills" class="button large scrolly">Technical Skills</a>
 				</footer>
 			</div>
 		</article>	
