added portfolio button

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 								<h1>Hi. I'm <strong class="title-blue">Greg Rodriguez</strong>.</h1>
 							</header>
 							<p><strong>Software Developer</strong>...</p>
+							<a href="#portfolio" class="button large scrolly">Recent Work</a>
 						</div>
 					</div>
 				</div>
