added path for movie app source code link

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en">
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -51,16 +51,45 @@
 				<div class="row">
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="https://gregrodriguezjr.github.io/crypto_dashboard_v2/" target="_blank" class="image featured"><img src="images/pic01.jpg" alt="stock market candles" /></a>
-							<h3><a href="https://gregrodriguezjr.github.io/crypto_dashboard_v2/" target="_blank">Crypto Dashboard</a></h3>
-							<p><a href="https://github.com/GregRodriguezJr/crypto_dashboard_v2" target="_blank">Source Code</a></p>
+							<a 
+								href="https://gregrodriguezjr.github.io/crypto_dashboard_v2/" 
+								target="_blank" 
+								class="image featured">
+								<img src="images/pic01.jpg" alt="stock market candles" />
+							</a>
+							<h3>
+								<a 
+									href="https://gregrodriguezjr.github.io/crypto_dashboard_v2/" 
+									target="_blank">
+									Crypto Dashboard
+								</a>
+							</h3>
+							<a 
+								href="https://github.com/GregRodriguezJr/crypto_dashboard_v2" 
+								target="_blank">
+								Source Code
+							</a>
 						</article>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<h3><a href="#">Veroeros primis</a></h3>
-							<p>Ornare nulla proin odio consequat.</p>
+							<a 
+								href="#" 
+								target="_blank" 
+								class="image featured">
+								<img src="images/movie_reel.jpg" alt="movie reel" />
+							</a>
+							<h3>
+								<a 
+									href="#">
+									Movie App
+								</a>
+							</h3>
+							<a 
+								href="https://github.com/GregRodriguezJr/movie-app" 
+								target="_blank">
+								Source Code
+							</a>
 						</article>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
